# FFTCPU_libs

./: .gitignore  .gitlab-ci.yml  CHANGELOG  README.md
fftw/: CMakeLists.txt  Makefile  README.md  create_csv.sh  main.c  main.cpp  max_perf.sh  omp_fftw_run.sh  omp_run.sh  runtime_fftw.csv
fftw/cmake/: FindFFTW.cmake
fftw/common/: fft_api.h  helper.c  helper.h
fftw/csv/estimate/: dp_32.csv  est_dp_128.csv  est_dp_256.csv  est_dp_512.csv  est_dp_64.csv  est_sp_128.csv  est_sp_256.csv  est_sp_512.csv  est_sp_64.csv  sp_32.csv
fftw/csv/estimate/plan/: dp_256_plan.csv  dp_32_plan.csv  dp_512_plan.csv  sp_512_plan.csv  sp_64_plan.csv
fftw/csv/estimate/plans/: dp_128_plan.csv  dp_64_plan.csv  sp_128_plan.csv  sp_256_plan.csv  sp_32_plan.csv
fftw/csv/exhaustive/: dp_128.csv  dp_256.csv  dp_32.csv  dp_64.csv  dp_64_plan.csv  exhaustive_dp_64.csv  sp_128.csv  sp_256.csv  sp_32.csv  sp_64.csv
fftw/csv/exhaustive/plans/: dp_128_plan.csv  dp_256_plan.csv  dp_32_plan.csv  dp_64_plan.csv  sp_128_plan.csv  sp_256_plan.csv  sp_32_plan.csv  sp_64_plan.csv
fftw/csv/measure/: dp_128.csv  dp_256.csv  dp_32.csv  dp_512.csv  dp_64.csv  sp_128.csv  sp_256.csv  sp_32.csv  sp_512.csv  sp_64.csv
fftw/csv/measure/plan/: dp_128_plan.csv  dp_256_plan.csv  dp_32_plan.csv  dp_512_plan.csv  dp_64_plan.csv  sp_128_plan.csv  sp_256_plan.csv  sp_32_plan.csv  sp_512_plan.csv  sp_64_plan.csv
fftw/csv/patient/: dp_128.csv  dp_256.csv  dp_512.csv  dp_64.csv  sp_1024.csv  sp_128.csv  sp_512.csv
fftw/csv/patient/nodes1/: dp_32.csv  runtime_sp_nodes1.csv  sp_256.csv  throughput_sp_nodes1.csv
fftw/csv/patient/nodes4/: runtime_nodes4.csv  sp_1024.csv  sp_128.csv  sp_256.csv  sp_32.csv  sp_512.csv  sp_64.csv  throughput_nodes4.csv
fftw/csv/patient/nodes8/: runtime_nodes8.csv  sp_1024.csv  sp_128.csv  sp_256.csv  sp_32.csv  sp_512.csv  sp_64.csv  throughput_nodes8.csv
fftw/csv/patient/plan/: dp_128_plan.csv  (+8 more)
fftw/data/: Readme.md  fft_128.csv  fft_128_omp.csv  fft_16.csv  fft_16_omp.csv  fft_256.csv  fft_256_omp.csv  fft_32.csv  fft_32_omp.csv  fft_64.csv  fft_64_omp.csv
fftw/data/.ipynb_checkpoints/: perf_13.01-checkpoint.csv
fftw/data/pcie/: README.md
fftw/docs/: hybrid.md  omp.md
fftw/examples/: hybrid_many.cpp  openmp_many.cpp
fftw/include/: fft_dp_ref.h  fft_sp_ref.h  fftw_many_sp.h  fftw_many_sp.hpp  fftwf_many.hpp  helper.h  helper.hpp
fftw/raw/estimate/: dp_128_2020.03.02-11.22  dp_32_2020.03.04-11.28  dp_512_2020.03.06-13.36  dp_64_2020.03.02-11.22  sp_128_2020.03.02-13.03  sp_64_2020.03.02-13.03
fftw/raw/exhaustive/: dp_128_2020.03.04-13.12  dp_32_2020.03.04-13.12  sp_128_2020.03.04-13.12  sp_32_2020.03.04-13.12  sp_64_2020.03.04-13.12
fftw/raw/measure/: dp_256_2020.03.02-17.16  dp_32_2020.03.04-11.40  dp_64_2020.02.28-16.38  sp_128_2020.02.27-18.38  sp_32_2020.03.04-11.40  sp_512_2020.03.07-13.06  sp_64_2020.02.27-18.38
fftw/raw/patient/: dp_64_2020.02.27-19.07  sp_1024_2020.03.11-09.18
fftw/scripts/: create_csv.sh  max_perf.sh  monster_run.sh  mpi_fftw_sp_estimate.sh  mpi_fftw_sp_patient.sh  mpi_fftw_sp_patient_cp.sh  omp_fftw_dp_exhaustive.sh  omp_fftw_dp_measure.sh  omp_fftw_dp_patient.sh  omp_fftw_dp_run.sh  omp_fftw_sp_exhaustive.sh  omp_fftw_sp_measure.sh  omp_fftw_sp_patient.sh  omp_fftw_sp_patient_close.sh  omp_fftw_sp_patient_spread.sh  omp_fftw_sp_run.sh  plan.sh
fftw/scripts/evaluation/: fftw_plot_perf.ipynb  perf_fftw.sh  perf_fftw_quart.sh
fftw/scripts/fftw_runs/: mpi_measure.sh  mpi_measure32.sh  mpi_patient.sh  mpi_patient128.sh  mpi_patient16.sh  mpi_patient32.sh  mpi_patient4.sh  mpi_patient64.sh  mpi_patient8.sh  omp_fftw_patient.sh
fftw/src/: fft_dp_ref.c  fft_sp_ref.c  fftw_many_sp.cpp  fftwf_hybrid.cpp  fftwf_openmp.cpp  helper.c  helper.cpp
fftw/wisdom/mpi2nodes/: fftw_1024_p16_t4_b1.patient  fftw_1024_p32_t1_b1.measure  fftw_1024_p32_t1_b1.patient  fftw_1024_p32_t2_b1.measure  fftw_1024_p32_t2_b1.patient  fftw_1024_p4_t16_b1.patient  fftw_1024_p64_t1_b1.measure  fftw_1024_p64_t1_b1.patient  fftw_1024_p64_t2_b1.patient  fftw_1024_p8_t8_b1.patient  fftw_128_p16_t4_b1.patient  fftw_128_p32_t1_b1.measure  fftw_128_p32_t1_b1.patient  fftw_128_p32_t2_b1.measure  fftw_128_p32_t2_b1.patient  fftw_128_p4_t16_b1.patient  fftw_128_p64_t1_b1.measure  fftw_128_p64_t1_b1.patient  fftw_128_p64_t2_b1.patient  fftw_128_p8_t8_b1.patient  fftw_2048_p64_t1_b1.patient  fftw_2048_p64_t2_b1.patient  fftw_256_p16_t4_b1.patient  fftw_256_p32_t1_b1.measure  fftw_256_p32_t1_b1.patient  fftw_256_p32_t2_b1.measure  fftw_256_p32_t2_b1.patient  fftw_256_p4_t16_b1.patient  fftw_256_p64_t1_b1.measure  fftw_256_p64_t1_b1.patient  fftw_256_p64_t2_b1.patient  fftw_256_p8_t8_b1.patient  fftw_32_p16_t4_b1.patient  fftw_32_p32_t1_b1.measure  fftw_32_p32_t1_b1.patient  fftw_32_p32_t2_b1.measure  fftw_32_p32_t2_b1.patient  fftw_32_p4_t16_b1.patient  fftw_32_p64_t1_b1.patient  fftw_32_p8_t8_b1.patient  (+19 more)
fftw/wisdom/mpi4nodes/: fftw_1024_p128_t1_b1.patient  fftw_1024_p32_t4_b1.patient  fftw_128_p128_t1_b1.patient  fftw_128_p32_t4_b1.patient  fftw_2048_p128_t1_b1.patient  fftw_2048_p32_t4_b1.patient  fftw_256_p128_t1_b1.patient  fftw_256_p32_t4_b1.patient  fftw_32_p32_t4_b1.patient  fftw_512_p128_t1_b1.patient  fftw_512_p32_t4_b1.patient  fftw_64_p32_t4_b1.patient  fftw_64_p64_t2_b1.patient
fftw/wisdom/mpi8nodes/: fftw_1024_p128_t2_b1.patient  fftw_1024_p256_t1_b1.patient  fftw_128_p128_t2_b1.patient  fftw_2048_p256_t1_b1.patient  fftw_256_p128_t2_b1.patient  fftw_256_p256_t1_b1.patient  fftw_512_p128_t2_b1.patient  fftw_512_p256_t1_b1.patient
mkl/: CMakeLists.txt  Makefile  README.md  create_csv.sh  main.c  omp_mkl_fft_run.sh  runtime_mkl.csv  throughput_mkl.csv
mkl/cmake/: extDep.cmake
mkl/common/: helper.c  helper.h
mkl/data/: fft_128.csv  fft_16.csv  fft_256.csv  fft_32.csv  fft_64.csv
mkl/examples/: openmp_many.cpp
mkl/include/: helper.hpp  mkl_many.hpp
mkl/scripts/fft_runs/: omp_mkl_patient.sh  omp_mkl_patient_expm1_core.sh  omp_mkl_patient_expm1_scatter.sh  omp_mkl_patient_expm2_core.sh  omp_mkl_patient_expm2_scatter.sh
mkl/src/: helper.cpp  mkl_openmp.cpp
(+4454 files in other folders)
